syntax = "proto3";
import "google/protobuf/timestamp.proto";
package pb;


option go_package = "github.com/RoyceAzure/go-stockinfo-distributor/pb";

message ClientRegister{
    string client_id = 1;
    string stock_code = 2;
    google.protobuf.Timestamp  create_at= 3;
    google.protobuf.Timestamp  update_at= 4;
}